--- a/_index.html
+++ b/_index.html
@@ -3,7 +3,7 @@
 <body>
     <p id='server-time'></p>
     <script>
-        var HOST = location.origin.replace(/^http/, 'ws')
+        var HOST = location.origin.replace('ws://localhost:3000')
         var ws = new WebSocket(HOST);
         var el = document.getElementById('server-time');
         ws.onmessage = function (event) {
