modify host name

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 
 <body>
     <p id='server-time'></p>
@@ -10,6 +10,17 @@
             el.innerHTML = 'Server time: ' + event.data;
         };
     </script>
+</body>
+
+</html> -->
+
+<html>
+
+<body>
+    <script src='./index.js'></script>
+    <div>
+        hello
+    </div>
 </body>
 
 </html>
