--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <body>
     <p id='server-time'></p>
-    <script src="/socket.io/socket.io.js"></script>
+    <!-- <script src="../socket.io/socket.io.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
     <script>
         var socket = io();
         var el = document.getElementById('server-time');
