--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <body>
     <p id='server-time'></p>
     <!-- <script src="../socket.io/socket.io.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>-->
+    <script src="http://websocket-starting.herokuapp.com//socket.io/socket.io.js"></script>
     <script>
         var socket = io();
         var el = document.getElementById('server-time');
