--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         } else {
             // this.ws = new WebSocket('ws://192.168.1.105:3000');
-            this.ws = new WebSocket('ws://vpon-task.herokuapp.com');
+            this.ws = new WebSocket('wss://vpon-task.herokuapp.com');
 
         }
 
